fixed scrollbar showing in sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,14 @@
   --color-background: #27272a;
 
 }
+
+
+
+.hide-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
